--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-.htaccess
-wp-config.php
-wp-content/uploads/
-wp-content/blogs.dir/
-wp-content/upgrade/
-wp-content/backup-db/
-wp-content/advanced-cache.php
-wp-content/wp-cache-config.php
-sitemap.xml
-*.log
-wp-content/cache/
-wp-content/backups/
-sitemap.xml.gz
+_site/*
+_theme_packages/*
 
+Thumbs.db
 .DS_Store
+
+!.gitkeep
+
+.rbenv-version
+.rvmrc
